--- a/android/src/main/res/layout/activity_dialog01.xml
+++ b/android/src/main/res/layout/activity_dialog01.xml
@@ -32,8 +32,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/cameraBtn"
-            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_weight="1"
+            android:padding="10dp"
+            android:background="@null"
             android:fontFamily="@font/notosans"
             android:text="카메라 실행" />
 
@@ -57,8 +58,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/galleryBtn"
-            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_weight="1"
+            android:background="@null"
+            android:padding="10dp"
+
             android:fontFamily="@font/notosans"
             android:text="갤러리 실행" />
     </LinearLayout>
