--- a/android/src/main/res/layout/activity_dialog03.xml
+++ b/android/src/main/res/layout/activity_dialog03.xml
@@ -41,9 +41,9 @@
                             android:background="@drawable/line_btn_t"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            style="@style/Widget.AppCompat.Button.Borderless"
                             android:layout_weight="1"
                             android:textSize="17dp"
+                            android:padding="10dp"
                             android:fontFamily="@font/notosans"
                             android:text="확인" />
 
@@ -57,10 +57,10 @@
 
                         <Button
                             android:id="@+id/noBtn"
+                            android:padding="10dp"
                             android:background="@drawable/line_btn_t"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            style="@style/Widget.AppCompat.Button.Borderless"
                             android:layout_weight="1"
                             android:textSize="17dp"
                             android:fontFamily="@font/notosans"
