--- a/android/src/main/res/drawable/ic_baseline_folder_24.xml
+++ b/android/src/main/res/drawable/ic_baseline_folder_24.xml
@@ -3,8 +3,6 @@
     android:height="50dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#3872DF">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M7,40Q5.85,40 4.925,39.075Q4,38.15 4,37V11Q4,9.85 4.925,8.925Q5.85,8 7,8H21.05L24.05,11H41Q42.15,11 43.075,11.925Q44,12.85 44,14H22.75L19.75,11H7Q7,11 7,11Q7,11 7,11V37Q7,37 7,37Q7,37 7,37L12.1,17H47L41.65,37.7Q41.35,38.9 40.55,39.45Q39.75,40 38.5,40ZM10.15,37H38.75L42.95,20H14.35ZM10.15,37 L14.35,20 10.15,37ZM7,14V11Q7,11 7,11Q7,11 7,11V14Z"/>
+    android:tint="#BEBEBE">
+ <path android:fillColor="@android:color/blue" android:pathData="M10,4H4c-1.1,0 -1.99,0.9 -1.99,2L2,18c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2V8c0,-1.1 -0.9,-2 -2,-2h-8l-2,-2z"/>
 </vector>
