--- a/android/src/main/res/drawable/ic_baseline_folder_24.xml
+++ b/android/src/main/res/drawable/ic_baseline_folder_24.xml
@@ -4,5 +4,5 @@
     android:viewportWidth="24"
     android:viewportHeight="24"
     android:tint="#BEBEBE">
- <path android:fillColor="@android:color/blue" android:pathData="M10,4H4c-1.1,0 -1.99,0.9 -1.99,2L2,18c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2V8c0,-1.1 -0.9,-2 -2,-2h-8l-2,-2z"/>
+ <path android:fillColor="#03DAC6" android:pathData="M10,4H4c-1.1,0 -1.99,0.9 -1.99,2L2,18c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2V8c0,-1.1 -0.9,-2 -2,-2h-8l-2,-2z"/>
 </vector>
