--- a/android/src/main/res/drawable/line_btn_r.xml
+++ b/android/src/main/res/drawable/line_btn_r.xml
@@ -9,12 +9,12 @@
         <shape android:shape="rectangle" >
             <stroke
                 android:width="1dp"
-                android:color="#D3D3D3" />
+                android:color="#FFFFFF" />
 
             <solid android:color="#00000000" />
 
             <corners
-                android:topRightRadius="20dp"
+                android:topRightRadius="25dp"
                 />
         </shape>
     </item>
