--- a/android/src/main/res/drawable/round_bg.xml
+++ b/android/src/main/res/drawable/round_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- 배경색 -->
-    <solid android:color="#ffffff"/>
+    <solid android:color="#51B4EC"/>
 
 
 <!--    &lt;!&ndash; 테두리 색 및 두께 &ndash;&gt;-->
