--- a/android/src/main/res/layout/activity_dialog01.xml
+++ b/android/src/main/res/layout/activity_dialog01.xml
@@ -25,7 +25,7 @@
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@null"
+            android:background="@drawable/round_bg"
             android:src="@drawable/ic_baseline_photo_camera_24"/>
 
         <Button
@@ -51,7 +51,7 @@
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@null"
+            android:background="@drawable/round_bg"
             android:src="@drawable/ic_baseline_folder_24"/>
 
         <Button
