--- a/android/src/main/res/drawable/round_bg.xml
+++ b/android/src/main/res/drawable/round_bg.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
 
-   <solid 
-       android:color="#51B4EC"/>
+   <solid android:color="#51B4EC"/>
 
-   <size 
-       android:width="120dp"
-        android:height="120dp"/>
+   <size android:width="120dp" android:height="120dp"/>
 </shape>
-
 
