--- a/android/src/main/res/layout/activity_dialog01.xml
+++ b/android/src/main/res/layout/activity_dialog01.xml
@@ -25,6 +25,7 @@
             android:layout_marginTop="10dp"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:gravity="center"
             android:background="@drawable/round_bg"
             android:src="@drawable/ic_baseline_photo_camera_24"/>
 
@@ -51,6 +52,7 @@
             android:layout_marginTop="10dp"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:gravity="center"
             android:background="@drawable/round_bg"
             android:src="@drawable/ic_baseline_folder_24"/>
 
